--- a/test/css/style.css
+++ b/test/css/style.css
@@ -39,6 +39,8 @@ header{
 }
 .logo{
 	font-family: SCRIPTIN;
+	display: inline-block;
+	position: relative;
 	font-size: 24px;
 	color: #fff;
 	text-decoration: none;
@@ -46,20 +48,21 @@ header{
 	float: left;
 }
 .logo:hover{
-	color:#a735b9;
+	color:#FFFF00
 }
 .main_menu{
 	display: inline-block;
+	text-align: center;
 	width: 83%;
 }
 #menu_main a:hover{
-	color: #a735b9;
+	color: #FFFF00;
 }
 #our_menu:hover{
 	background-color: rgba(86,83,76,1.2);
 }
 #font:hover{
-	color: #a735b9;
+	color: #FFFF00;
 }
 ul{
 	font-family: Alegreya-Regular;
@@ -351,9 +354,6 @@ li>span{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;  
-	-webkit-border-bottom-left-radius:10px;
-   -moz-border-radius:0 0 0 5px;
-	border-radius:0 0 0 10%;
 	z-index: 0;
 }
 .h3{
@@ -436,7 +436,8 @@ li>span{
 	color: rgba(216,187,163,0.4); 
 }
 #hide:hover{
-	color: rgba(216,187,163,1); 
+	color: rgba(216,187,163,1);
+	cursor: default; 
 }
 #tim{
 	max-width: 100%;
@@ -481,11 +482,13 @@ li>span{
 .stars li{
 	display: block;
 	font-size: 25px;
+	cursor: default;
 }
 .fourth{
 	background: url("../img/fourth/placeholder.png") no-repeat 50%;
 	background-size: cover;
 	font-family: ALegreya-Bold;
+	margin-top: -10px;
 }
 .left4_part{
 	font-family: Alegreya-Bold;
@@ -537,7 +540,7 @@ li>span{
 	width: 100%;
 	background-color: #f3f1e9;
 	position: absolute;
-	right: 0;
+	right: 6%;
 	z-index: 999;
 }
 .m4{
@@ -561,40 +564,51 @@ li>span{
 }
 .forHead{
 	display: block;
-	width: 100%;
+	width: 90%;
 	line-height: 60px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 	vertical-align: middle;
-	text-align: left;
+	text-align: end;
 }
+.forHead:before{
+	content: "";
+    position: absolute;
+    left: 20px;
+    top: 115px;
+    right: 20px;
+    height: 2px;
+    background: #c2beba;
+    width: 89%;
+    z-index: 1;
+}
+
 .circle_left{
 	display: inline-block;
+	position: absolute;
 	width: 13px;
 	height: 13px;
 	border-radius: 13px;
+	margin-top: 22px;
+	left: 20px;
 	border:1px solid #c2beba;
-	margin-left: 18px;
 	background-color: #f3f1e9;
+	z-index: 50;
 }
 .circle_right{
 	display: inline-block;
 	position: absolute;
+	margin-top: 22px;
+	right: 20px;
 	width: 13px;
 	height: 13px;
 	border-radius: 13px;
 	border:1px solid #c2beba;
-	right: 20px;
-	margin-top: 23px;
 	background-color: #f3f1e9;
+	z-index: 50;
 }
-.linee{
-	display: inline-block;
-	width: 365px;
-	height: 1px;
-	background-color: #c2beba;
-	position: absolute;
-	top: 117px;
-	left: 30px;
-}
+
 .circle_center{
 	display: inline-block;
 	position: absolute;
@@ -606,6 +620,7 @@ li>span{
 	right: 0;
 	margin: 0 auto;
 	background-color: #f3f1e9;
+	z-index: 50;
 }
 .circle_center img{
 	display: block;
@@ -652,7 +667,7 @@ li>span{
 	width: 100%;
 	background-color: #f3f1e9;
 	position: absolute;
-	right: -4%;
+	right: 3%;
 	margin-top: 4%;
 	z-index: 4;
 	opacity: 0.9;
@@ -662,7 +677,7 @@ li>span{
 	width: 100%;
 	background-color: #f3f1e9;
 	position: relative;
-	right: -8%;
+	right: 0%;
 	margin-top: 8%;
 	z-index: 1;
 	opacity: 0.8;
@@ -723,18 +738,22 @@ li>span{
 .rit{
 	display: inline-block;
 	width: 68%;
+	height: 100%;
+	position: absolute;
 	right: 0;
 	text-align: center;
 }
 .for_img{
 	display: block;
 	position: absolute;
+	text-align: left;
 	top: 250px;
 	right: 0;
-	width: 800px;
+	width: 100%;
 	height: 600px;
 	background-color: #fff;
 }
+
 .for_img img{
 	display: block;
 	right: 0;
@@ -747,7 +766,7 @@ li>span{
 	display: inline-block;
 	background-color: #fff;
 	position: relative;
-	float: left;
+	text-align: center;
     margin-left: -20px;
     margin-top: -40px;
 	color: #dfc691;
@@ -761,6 +780,7 @@ li>span{
 }
 footer{
 	display: block;
+	text-align: center;
 	max-width: 1260px;
 	line-height: 100px;
 	left: 0;
@@ -773,12 +793,15 @@ footer{
 	width: 40%;
 	color: #97958a;
 	font-size: 20px;
-	text-align: left;
+	text-align: center;
 	border-top: 1px solid #c2beba;
 	border-bottom: 1px solid #c2beba;
 }
 #foot li{
 	color: #97958a;
+}
+#foot li>a:hover{
+	color: #FFFF00;
 }
 #foot a{
 	color: #97958a;
@@ -786,15 +809,16 @@ footer{
 }
 .logo_in_footer{
 	display: inline-block;
-	width: 20%;
+	width: 18%;
 	color: #97958a;
-	float: none;
 	font-size: 50px;
 	text-align: center;
+	float: none;
 }
 .time_for_img{
 	display: block;
 	position: absolute;
+	text-align: center;
 	top: -8%;
 	right: 0;
 	width: 240px;
