--- a/test3/less/style.less
+++ b/test3/less/style.less
@@ -32,7 +32,7 @@
 }
 .for_i{
 	color:@color-hex;
-	font-size:40px;
+	font-size:30px;
 	cursor:pointer;
 	padding: 5px 5px 0  0;
 	float:right;
@@ -51,6 +51,7 @@ body{
 	font-size: 14px;
 	max-width:1920px;
 	margin: 80px auto 0;
+	font-family: Arial;
 	@media all and (max-width : 768px) and (min-width : 375px){
 		&{
 			font-size: 11px;
